# iso20022-hn

./: .codacy.yml  .codecov.yml  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .mutmut-cache  .pylintrc  .releaserc.json  CHANGELOG.md  CI_STATUS_SUMMARY.md  CONTRIBUTING.md  Dockerfile  FINAL_CI_STATUS.md  MANIFEST.in  MULTI_PYTHON_CI_STATUS.md  Makefile  README.md  RELEASE_NOTES_v0.0.26.md  ROADMAP.md  SECURITY.md  VERSION_MANAGEMENT.md  conftest.py  docker-compose.yml  generate_xml_examples.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  verify_versions.py
.claude/: settings.json
.claude/api-standards/: SKILL.md
.claude/clean-hexagonal-architecture/: SKILL.md
.claude/commits-versioning/: SKILL.md
.claude/design-patterns/: SKILL.md
.claude/env-config/: SKILL.md
.claude/markdown-style/: SKILL.md
.claude/naming-conventions/: SKILL.md
.claude/repo-standards/: SKILL.md
.claude/security-optimization/: SKILL.md
.claude/testing-standards/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: README.md  python-contracts.md  python-deps.md  python-performance.md  python-quality.md  python-security.md  python-supply-chain.md
.github/codeql/: codeql-config.yml
.github/codeql/extensions/: pain001-security.model.yml  qlpack.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  nightly.yml  pr.yml  quality.yml  release.yml  security.yml  slo.yml
docs/: build.sh  conf.py  configuration.rst  custom_validation.rst  examples.rst  faq.rst  glossary.rst  index.rst  installation.rst  pain001.cli.rst  pain001.csv.rst  pain001.data.rst  pain001.db.rst  pain001.rst  pain001.xml.rst  structured_logging.rst  usage.rst
pain001/: __init__.py  __main__.py  exceptions.py  logging_schema.py
pain001/api/: app_local.py
pain001/api/local/: __init__.py  constants.py  enums.py  i18n.py  limiter.py  message-codes.json  models.py  request_context.py  responses.py  settings.py  validators.py
pain001/cli/: __init__.py  cli.py
pain001/constants/: constants.py
pain001/context/: context.py
pain001/core/: core.py
pain001/csv/: __init__.py  load_csv_data.py  validate_csv_data.py
pain001/data/: loader.py
pain001/db/: __init__.py  load_db_data.py  validate_db_data.py
pain001/templates/: __init__.py
pain001/templates/pain.001.001.04/: template.db
pain001/templates/pain.001.001.05/: template.db
pain001/templates/pain.001.001.06/: __init__.py  template.db
pain001/templates/pain.001.001.09/: template.db
pain001/test_fixtures/: test_matrix.db
pain001/validation/: bic_validator.py  iban_validator.py
pain001/xml/: __init__.py  create_common_elements.py  create_root_element.py  create_xml_element.py  create_xml_v10.py  create_xml_v11.py  create_xml_v3.py  create_xml_v4.py  create_xml_v5.py  create_xml_v6.py  create_xml_v7.py  create_xml_v8.py  create_xml_v9.py  generate_updated_xml_file_path.py  generate_xml.py  register_namespaces.py  validate_via_xsd.py  write_xml_to_file.py
releases/: v0.0.27.md  v0.0.28.md  v0.0.29.md  v0.0.30.md  v0.0.31.md  v0.0.32.md  v0.0.33.md  v0.0.34.md  v0.0.35.md  v0.0.36.md  v0.0.37.md  v0.0.38.md  v0.0.39.md  v0.0.40.md  v0.0.41.md  v0.0.42.md  v0.0.43.md  v0.0.44.md  v0.0.45.md  v0.0.46.md  v0.0.47.md
scripts/: enforce_slos.py  fix_templates.py  generate_missing_examples.py  generate_xml_examples.py  guard-precheck.py  load-test.sh  regenerate_template_dbs.py  test_input_sources.py  tok-capture.sh  tok-meter.py  validate_readme_examples.py
scripts/fixtures/: generate-ach-payload.json
scripts/git-hooks/: post-merge  pre-push
tests/: perf_benchmarks.py  test_additional_coverage.py  test_api.py  test_backward_compatibility.py  test_bic_validator.py  test_cli.py  test_cli_coverage.py  test_cli_error_paths.py  test_conftest.py  test_context.py  test_core.py  test_coverage.py  test_coverage_complete.py  test_create_root_element.py  test_create_xml_element.py  test_csv_datetime_validation.py  test_csv_loader.py  test_csv_validator.py  test_data.py  test_data_loader.py  test_data_loader_streaming.py  test_db_loader.py  test_edge_branches.py  test_enforce_slos.py  test_exceptions.py  test_full_coverage.py  test_generate_updated_xml_file_path.py  test_generate_xml.py  test_generate_xml_versions.py  test_iban_validator.py  test_integration.py  test_integration_matrix.py  test_json_loader.py  test_json_logging.py  test_load_csv_data.py  test_load_db_data.py  test_logging_schema.py  test_main.py  test_pain001_v03.py  test_pain001_v04.py  (+29 more)
tests/api_local/: conftest.py  test_creditor_country.py  test_endpoints.py  test_generate_golden.py  test_optional_nodes.py  test_preview_csv.py
tests/data/: pain.001.001.03.xml
