[tool.poetry]
name = "pain001"
version = "0.0.47"
description = "Pain001 is a Python Library for Automating ISO 20022-Compliant Payment Files Using CSV Data."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/pain001"
homepage = "https://pain001.com"
packages = [
    { include = "pain001" },
]
include = [
    "pain001/schemas/*",
    "pain001/templates/*",
    "pain001/test_fixtures/**/*",
]

[tool.poetry.scripts]
pain001 = "pain001.__main__:cli"

[tool.poetry.dependencies]
click = ">=8.3.3,<9"
colorama = "0.4.6"
defusedxml = ">=0.7.1,<1"
jinja2 = ">=3.1.6,<4"
markupsafe = "2.1.5"
pygments = ">=2.20.0,<3"
python = ">=3.10,<4.0"
rich = ">=13.7,<15"
xmlschema = ">=3.4.0,<4.0.0"
cryptography = ">=44.0.1,<49.0.0"
jsonschema = ">=4.17,<5"
fastapi = ">=0.115"
uvicorn = {version = ">=0.20", extras = ["standard"]}
httpx = ">=0.23"
pyarrow = ">=23.0.1,<25.0.0"
slowapi = ">=0.1.9"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-multipart = ">=0.0.18,<1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-benchmark = "^4.0.0"
mypy = "^1.11.0"
ruff = "^0.1.0"
types-defusedxml = "^0.7.0"
types-setuptools = "^65.0.0"
types-jsonschema = "^4.26.0.20260109"
pandas = "^2.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Coverage enforcement (98% floor, fail-fast on regression)
addopts = [
    "--cov=pain001",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=70",
    "--tb=short",
    "-ra",
    "--strict-markers",
    "--disable-warnings"
]

# Markers for test categorization
markers = [
    "integration: end-to-end workflow tests",
    "version_compat: pain.001 version compatibility tests (v03-v11)",
    "slow: tests taking > 1s",
    "security: XXE and injection prevention tests",
    "perf: performance/benchmark tests",
    "smoke: quick sanity checks"
]

# Timeout for blocking tests (5s default, prevent hangs)
timeout = 5

# Parallel execution (xdist)
# Uncomment to enable: -n auto
# Note: Coverage aggregation works with xdist via .coveragerc

[tool.ruff]
line-length = 79
target-version = "py39"
extend-exclude = [".github/*.md", "*.md", "docs/**/*.md", "releases/**/*.md", "tmp_env", ".venv", ".eggs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (includes F811 reimport detection)
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
exclude = [
    "pain001/templates/",
    "setup.py",
    "scripts/",
    "tmp_env/",
    ".venv/",
    ".eggs/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false
disable_error_code = [
    "arg-type",
    "return-value",
    "attr-defined",
    "assignment",
]

[[tool.mypy.overrides]]
module = "xmlschema.*"
ignore_missing_imports = true